--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
-  "name": "graphql-crud",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+  "name": "myapi",
+  "version": "0.0.1",
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^12.12.8",
+    "nodemon": "^1.19.4",
+    "ts-node": "8.5.2",
+    "typescript": "3.7.2"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tomassabol/graphql-CRUD.git"
-  },
-  "keywords": [],
-  "author": "https://github.com/tomassabol",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tomassabol/graphql-CRUD/issues"
-  },
-  "homepage": "https://github.com/tomassabol/graphql-CRUD#readme",
   "dependencies": {
-    "@types/express": "^4.17.16",
-    "@types/node": "^18.11.18",
-    "apollo-server-express": "^3.11.1",
-    "express": "^4.18.2",
-    "graphql": "15.x.x",
-    "nodemon": "^2.0.20",
-    "reflect-metadata": "^0.1.13",
+    "apollo-server-express": "2.9.16",
+    "express": "4.18.2",
+    "graphql": "14.5.8",
+    "pg": "7.13.0",
+    "reflect-metadata": "0.1.10",
     "sqlite3": "^5.1.4",
-    "ts-node": "^10.9.1",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.11",
-    "typescript": "^4.9.5"
+    "type-graphql": "0.17.5",
+    "typeorm": "^0.2.20"
+  },
+  "scripts": {
+    "start": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc"
   }
 }
